[package]
name = "rltk_tutorial_01"
version = "0.1.0"
authors = ["Marcin Brysz <bryszmarcin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.7.0" }
specs = "0.16.1"
specs-derive = "0.4.1"
